# Comp_geom

./: main.c  work_with_PNM.c  work_with_PNM.h
lab1/: CMakeLists.txt  main.c  tests.sh  work_with_PNM.c  work_with_PNM.h
lab1v2/: CMakeLists.txt  NetPBM.h  PBM.h  PPM.h  main.cpp
lab2/: CMakeLists.txt  NetPBM.h  main.cpp
lab3/: CMakeLists.txt  NetPBM.h  main.cpp
lab4/: CMakeLists.txt  Converter.h  PPM.h  main.cpp  pixel_t.h
lab4/converters/: BaseConverter.h  fromCMYtoRGB.h  fromHSLtoRGB.h  fromHSVtoRGB.h  fromRGBtoCMY.h  fromRGBtoHSL.h  fromRGBtoHSV.h  fromRGBtoYCbCr601.h  fromRGBtoYCbCr709.h  fromRGBtoYCoCg.h  fromYCbCr601toRGB.h  fromYCbCr709toRGB.h  fromYCoCgtoRGB.h
